v2-microk8s-stateless-cluster/hello-ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tutum-service
  labels:
    app: tutum
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: tutum
