v2-microk8s-stateless-cluster/hello-ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tutum-ingress
spec:
  defaultBackend:
    service:
      name: tutum-service
      port:
        number: 80
